SpeakerReaders now read IDs
-updated ReadAllSpeakers and ReadASpeaker to read the IDs

-getASpeaker now queries by speakerID rather than email

-updatedswagger docs accordingly
